--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,11 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "antd": "^5.22.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "embla-carousel-autoplay": "^8.3.0",
-    "embla-carousel-react": "^8.3.0",
-    "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
