server: start project

--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run": "node --watch server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5"
+  },
+  "devDependencies": {
+    "compression": "^1.7.5",
+    "dotenv": "^16.4.7",
+    "helmet": "^8.0.0",
+    "morgan": "^1.10.0"
+  }
 }
