--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "run": "node --watch server.js"
+    "dev": "node --watch server.js"
   },
   "author": "",
   "license": "ISC",
