--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
+    "bcrypt": "^5.1.1",
     "compression": "^1.7.5",
     "dotenv": "^16.4.7",
     "helmet": "^8.0.0",
