--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,9 @@
     "compression": "^1.7.5",
     "dotenv": "^16.4.7",
     "helmet": "^8.0.0",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "validator": "^13.12.0"
   }
 }
