--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "bcrypt": "^5.1.1",
     "compression": "^1.7.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
