--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "ecommerce",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,18 +9,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2",
-    "mongoose": "^8.9.5"
-  },
-  "devDependencies": {
     "bcrypt": "^5.1.1",
     "compression": "^1.7.5",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5"
   }
 }
