--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,12 @@
     "compression": "^1.7.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.5",
-    "morgan": "^1.10.0",
-    "validator": "^13.12.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "cors": "^2.8.5"
