--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecommerce_fe",
+  "name": "ecommerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,10 +12,10 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "antd": "^5.22.3",
+    "@tanstack/react-query": "^5.64.2",
+    "antd": "^5.23.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
-    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
