--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "cors": "^2.8.5"
