--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.23.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
