--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "nodemailer": "^6.10.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "cors": "^2.8.5"
