--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "nodemailer": "^6.10.0",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "slugify": "^1.6.6",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
