--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
@@ -21,6 +22,7 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
