--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.758.0",
     "accesscontrol": "^2.2.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
